--- a/paginas/templates/paginas/doar.html
+++ b/paginas/templates/paginas/doar.html
@@ -13,9 +13,9 @@
     
     <div class="input-group mb-3">
         <div class="input-group-prepend">
-          <span class="input-group-text" id="basic-addon1">@</span>
+          <span class="input-group-text" id="basic-addon1">VAQUINHAAA</span>
         </div>
-        <img src="{% static 'img/vaquinha.jpg' %}" height="1000" width="2000">
+        <img src="{% static 'img/vaquinha1.jpg' %}" height="1000" width="2000">
         <input type="text" class="form-control" placeholder="Contribuidor" aria-label="Usuário" aria-describedby="basic-addon1">
       </div>
       
