--- a/paginas/templates/paginas/peça_ajuda.html
+++ b/paginas/templates/paginas/peça_ajuda.html
@@ -1,15 +1,45 @@
 {% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
+<<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-   
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Peça Ajuda</title>
+	<link rel="stylesheet" href="{% static 'css/mormalize.css' %}">
+	<link rel="stylesheet" href="[% static 'css/estilo.css' %}">
 </head>
 <body>
-    
+	<div id="container">
+		<header>
+			<div id="logo-peca-ajuda">
+				<img src="{% static 'img/logo.png' %}" height="120" width="120">
+			</div>
+		</header>
+
+		<div>
+			
+		</div>
+
+		<nav><!--INICIO NAV-->
+			<ul id="pecaajuda-nav">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="doacoes.html">Doações</a></li>
+				<li><a href="contato.html">Contato</a></li>
+				<li><a href="login.html">Login</a></li>
+			</ul>
+		</nav><!--FIM NAV-->
+	</div>
+
+	<br>
+	<br>
+
+	<form>
+		<div>
+			<div class="texto-ajuda">
+				
+			</div>
+		</div>
+	</form>
+	
 </body>
 </html>
